fix: Refactor reviewer and supervisor
